<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TidyTime</string>
    <string name="tidytime">TidyTime</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>
    <string name="timer">Timer</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="todo">Todo</string>
    <string name="initial_time">00:00</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>


</resources>