<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/charcoal">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTimer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/timer"
        android:textSize="50sp"
        android:background="@color/charcoal"
        android:textColor="@color/lightGray"
        android:fontFamily="sans-serif-condensed-light"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStopwatch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/stopwatch"
        android:textSize="50sp"
        android:background="@color/charcoal"
        android:textColor="@color/lightGray"
        android:fontFamily="sans-serif-condensed-light"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnTimer" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTodo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/todo"
        android:textSize="50sp"
        android:background="@color/charcoal"
        android:textColor="@color/lightGray"
        android:fontFamily="sans-serif-condensed-light"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnStopwatch" />

</androidx.constraintlayout.widget.ConstraintLayout>
