<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/charcoal">

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/initial_time"
        android:textColor="@color/lightGray"
        android:textSize="100sp"
        android:layout_marginTop="400dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonsContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chronometer">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/startStopButton"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/circle_button"
            android:fontFamily="sans-serif-condensed-light"
            android:padding="10dp"
            android:text="@string/start"
            android:textAllCaps="false"
            android:textColor="@color/lightGray"
            android:textSize="40sp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toStartOf="@+id/resetButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/resetButton"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/circle_button"
            android:fontFamily="sans-serif-condensed-light"
            android:padding="10dp"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:textColor="@color/lightGray"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/startStopButton"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
